[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "current_jumps"
version = "0.0.0"
authors = [
  { name="DaVonne Henry", email="dh1006@georgetown.edu" },
]
description = "Doing the current jumps analysis"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dvnne/current-jumps"